--- a/package.json
+++ b/package.json
@@ -92,6 +92,9 @@
     "dotenv": "^16.4.5",
     "electron-store": "^8.1.0",
     "electron-updater": "^6.1.1",
+    "i18next": "^23.16.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-localstorage-cache": "^1.1.1",
     "install": "^0.13.0",
     "js-tiktoken": "^1.0.10",
     "katex": "^0.16.10",
@@ -111,6 +114,7 @@
     "react-card-flip": "^1.2.2",
     "react-day-picker": "^8.7.1",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.1.1",
     "react-icons": "^4.12.0",
     "react-markdown": "^9.0.1",
     "react-quill": "^2.0.0",
